# server

./: Cargo.toml
src/: common.rs  config.rs  data.rs  dispatcher.rs  main.rs  registry.rs  sessions.rs
src/common/: chan.rs  data.rs  event.rs  message.rs  mod.rs  req.rs  requests.rs  resp.rs  utils.rs
src/dispatcher/: error.rs  mod.rs  serialization.rs  tests.rs  utils.rs  v1.rs
src/session/: handler.rs  messages.rs  mod.rs  serialization.rs  session.rs  utils.rs
src/session/utils/: mod.rs  pairings.rs
src/state/: messages.rs  misc.rs  mod.rs  session.rs  state.rs  utils.rs
