[package]
name = "bughouse-server"
version = "0.1.0"
authors = ["Kerem Çakırer <kcakirer@hotmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"
publish = false

[dependencies]
hyper = "0.13"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "stream", "sync", "time"] }

bughouse-rs = { git = "https://github.com/bughousers/bughouse-rs.git" }
